Store tags names rather than tag IDs in KContacts::Addressee.

Solves the issue that contact tags are represented as IDs in the vCard CATEGORIES field, which leads to loss of tags when using address books across multiple devices. This update uses tag names in favor of IDs and automatically creates them when necessary.

"Old" tag IDs in the database are still interpreted for backward compatibility.

See https://invent.kde.org/pim/akonadi-contacts/-/merge_requests/17

Related PRs in other projects:
* https://invent.kde.org/pim/kaddressbook/-/merge_requests/17
* https://invent.kde.org/frameworks/kcontacts/-/merge_requests/33

BUG: 332358